# second_candy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
calc_caps_postion/: CMakeLists.txt  filename.set  main.cpp
sctools/: __init__.py  bbox.py  label.py  oriental_augment.py  transform.py  voc.py
test/: CMakeLists.txt  main.cpp
tower/: create_tower_tf_record.py  test.py  train_rotation_regression.py
train_data/: calib.py  chinese_generate.py  label_tool.py  oriental_augment.py  sample_autogen.py  sample_label.py  sctool.py
train_data/tf-models/: test.py
